--- a/app/views/interviewerForm.html
+++ b/app/views/interviewerForm.html
@@ -1,28 +1,3 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12 input-group date" data-provide="datepicker">
-        <input type="date" class="form-control" ng-model="date">
-        <div class="input-group-addon">
-            <span class="glyphicon glyphicon-th"></span>
-        </div>
-        <div class="btn-group pull-right calChangeView">
-            <label class="btn btn-primary" ng-click="changeView('year')">Year</label>
-            <label class="btn btn-primary" ng-click="changeView('month')">Month</label>
-            <label class="btn btn-primary" ng-click="changeView('week')">Week</label>
-            <label class="btn btn-primary" ng-click="changeView('day')">Day</label>
-        </div>
-      </div>
-      <div>
-        <mwl-calendar
-          view="calendarView"
-          view-date="calendarDate"
-          events="events"
-          view-title="calendarTitle"
-          on-event-click="eventClicked()"
-          on-event-times-changed="calendarEvent.startsAt = calendarNewEventStart; calendarEvent.endsAt = calendarNewEventEnd"
-          cell-is-open="true">
-        </mwl-calendar>
-      </div>
-      <div style="margin-bottom:20px;">
-      </div>
-
+  show the image here
+</div>
